white theme for search friends screen

--- a/SportsSideKick/app/src/main/res/layout/fragment_friends_search.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_friends_search.xml
@@ -3,12 +3,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/colorPrimaryMediumLight"
+    android:background="@color/white"
     android:clickable="true">
+
+    <!--Status bar background-->
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="24dp"
+        android:background="@drawable/gradient_black_to_transparent"
+        tools:visibility="gone" />
 
     <View
         android:id="@+id/topSpacer"
-        android:background="@drawable/phone_background"
         android:layout_width="match_parent"
         android:layout_height="24dp"
         tools:visibility="gone" />
@@ -19,9 +25,21 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/standard_button_height"
         android:layout_below="@id/topSpacer"
-        android:background="@drawable/phone_background"
         android:orientation="horizontal"
         android:tileMode="repeat">
+
+        <ImageButton
+            android:id="@+id/backButton"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="@dimen/standard_button_height"
+            android:layout_height="@dimen/standard_button_height"
+            android:layout_alignParentBottom="true"
+            android:adjustViewBounds="true"
+            android:alpha="0.7"
+            android:padding="8dp"
+            android:scaleType="centerInside"
+            android:src="@drawable/ic_keyboard_arrow_left_white_24dp"
+            android:tint="@color/colorPrimary" />
 
         <TextView
             style="@style/boldText"
@@ -31,19 +49,9 @@
             android:layout_marginEnd="1dp"
             android:gravity="center_vertical"
             android:text="@string/friends"
-            android:textColor="?popupsCaptionColor"
+            android:textColor="@color/colorPrimary"
             android:textSize="@dimen/font_size_18" />
 
-        <android.support.v7.widget.AppCompatImageButton
-            android:id="@+id/backButton"
-            android:layout_width="@dimen/standard_button_height"
-            android:layout_height="@dimen/standard_button_height"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:background="@android:color/transparent"
-            android:src="@drawable/ic_keyboard_arrow_left_white_24dp"
-            android:tint="@color/colorPrimaryVeryLight"
-            android:visibility="gone" />
     </RelativeLayout>
 
 
@@ -59,21 +67,8 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/height_2"
             android:layout_marginEnd="@dimen/margin_1"
-            android:layout_weight="1"
-            android:background="@color/colorPrimaryVeryLight" />
+            android:background="#e7eaef" />
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/height_2"
-            android:layout_marginEnd="@dimen/margin_1"
-            android:layout_weight="1"
-            android:background="?colorAccent" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/height_2"
-            android:layout_weight="1"
-            android:background="@color/colorPrimaryVeryLight" />
     </LinearLayout>
     <!-- TOP BUTTONS CONTAINER -->
     <LinearLayout
@@ -82,7 +77,7 @@
         android:layout_height="@dimen/standard_button_height"
         android:layout_alignParentStart="true"
         android:layout_below="@id/center_split"
-        android:background="@color/colorPrimaryDark"
+        android:background="#e7eaef"
         android:orientation="horizontal">
 
         <TextView
@@ -91,10 +86,10 @@
             android:layout_height="match_parent"
             android:layout_marginEnd="@dimen/margin_1"
             android:layout_weight="1"
-            android:background="?popupNonSelectedCaptionBackgroundColorRef"
+            android:background="@color/white"
             android:gravity="center"
             android:text="@string/friends"
-            android:textColor="?popupNonSelectedCaptionTextColorRef" />
+            android:textColor="@color/colorPrimary" />
 
         <TextView
             android:id="@+id/add_friend"
@@ -112,10 +107,10 @@
             android:layout_width="@dimen/space_0"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="?popupNonSelectedCaptionBackgroundColorRef"
+            android:background="@color/white"
             android:gravity="center"
             android:text="@string/requests"
-            android:textColor="?popupNonSelectedCaptionTextColorRef" />
+            android:textColor="@color/colorPrimary" />
     </LinearLayout>
 
     <View
@@ -123,31 +118,29 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_2"
         android:layout_below="@id/top_container"
-        android:background="@color/colorPrimaryVeryDark" />
+        android:background="#e7eaef" />
 
     <RelativeLayout
         android:id="@+id/search_container"
         android:layout_width="match_parent"
+        android:layout_below="@id/spliter_profile"
         android:layout_height="@dimen/height_48"
         android:layout_alignParentStart="true"
-        android:layout_below="@id/spliter_profile"
-        android:background="@color/colorPrimaryMediumDark">
-
+        android:background="#e9eaee">
 
         <EditText
             android:id="@+id/add_friend_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginStart="@dimen/margin_10"
-            android:layout_toStartOf="@+id/search_icon"
             android:background="@null"
             android:hint="@string/friends_search"
             android:imeOptions="actionDone"
+            android:layout_marginStart="16dp"
+            android:textColor="@color/black"
             android:inputType="text"
+            android:textColorHint="#686868"
             android:maxLines="1"
-            android:textColor="?white"
-            android:textColorHint="?white"
             android:textSize="@dimen/font_size_12" />
 
         <ImageView
