--- a/SportsSideKick/app/src/main/res/drawable/wall_item_shadow.xml
+++ b/SportsSideKick/app/src/main/res/drawable/wall_item_shadow.xml
@@ -3,7 +3,7 @@
     <item>
         <shape android:shape="rectangle">
             <gradient
-                android:startColor="@color/colorGray"
+                android:startColor="@color/gray"
                 android:endColor="@null"
                 android:angle="270"
                 />
