--- a/SportsSideKick/app/src/main/res/layout/fragment_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_chat.xml
@@ -1,13 +1,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
     android:id="@+id/clickOutsideContainer"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/chatBackground"
     android:clickable="true"
     android:descendantFocusability="afterDescendants"
     android:focusable="false"
-    android:background="@color/chatBackground"
     tools:context=".ui.fragment.other.ChatFragment"
     tools:paddingTop="0dp">
 
@@ -185,13 +185,13 @@
         <ImageButton
             android:id="@+id/menu_button"
             style="@style/Widget.AppCompat.Button.Borderless"
-            android:layout_marginTop="1dp"
-            android:background="@color/colorGrayLight"
             android:layout_width="@dimen/standard_button_height"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginEnd="@dimen/height_1"
+            android:layout_marginTop="1dp"
             android:layout_toEndOf="@+id/chat_buttons_container"
+            android:background="@color/colorGrayLight"
             android:padding="8dp"
             android:scaleType="fitCenter"
             android:src="@drawable/ic_keyboard_arrow_right_black_24dp" />
@@ -247,18 +247,18 @@
             android:layout_height="@dimen/standard_button_height"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
-            android:background="@color/colorGrayLight"
             android:layout_marginStart="@dimen/height_1"
             android:layout_marginTop="1dp"
+            android:background="@color/colorGrayLight"
             android:src="@drawable/ic_more_horiz_black_24dp" />
 
         <LinearLayout
             android:id="@+id/chat_menu_dots_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="1dp"
             android:layout_toStartOf="@+id/chat_menu_dots"
             android:background="@color/colorGrayLight"
-            android:layout_marginTop="1dp"
             android:clickable="true"
             android:gravity="center"
             android:padding="@dimen/half_margin"
@@ -274,6 +274,7 @@
                 android:layout_weight="0.25"
                 android:background="?textViewRoundBorderShape"
                 android:gravity="center"
+                android:lineSpacingMultiplier="0.8"
                 android:padding="@dimen/half_margin"
                 android:text="@string/chat_create"
                 android:textColor="@color/white"
@@ -289,6 +290,7 @@
                 android:layout_weight="0.25"
                 android:background="?textViewRoundBorderShape"
                 android:gravity="center"
+                android:lineSpacingMultiplier="0.8"
                 android:padding="@dimen/half_margin"
                 android:text="@string/edit"
                 android:textColor="@color/white"
@@ -304,6 +306,7 @@
                 android:layout_weight="0.25"
                 android:background="?textViewRoundBorderShape"
                 android:gravity="center"
+                android:lineSpacingMultiplier="0.8"
                 android:padding="@dimen/half_margin"
                 android:text="@string/delete"
                 android:textColor="@color/white"
@@ -319,6 +322,7 @@
                 android:layout_weight="0.25"
                 android:background="?textViewRoundBorderShape"
                 android:gravity="center"
+                android:lineSpacingMultiplier="0.8"
                 android:padding="@dimen/half_margin"
                 android:text="@string/chats_public_search"
                 android:textColor="@color/white"
@@ -334,6 +338,7 @@
                 android:layout_weight="0.25"
                 android:background="?textViewRoundBorderShape"
                 android:gravity="center"
+                android:lineSpacingMultiplier="0.8"
                 android:padding="@dimen/half_margin"
                 android:text="@string/alerts_on"
                 android:textColor="@color/white"
@@ -442,9 +447,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clickable="true"
-        android:visibility="gone"
         android:elevation="3dp"
         android:focusable="false"
+        android:visibility="gone"
         tools:layout_height="0dp">
 
         <ImageView
