--- a/SportsSideKick/app/src/brugge/res/values/styles.xml
+++ b/SportsSideKick/app/src/brugge/res/values/styles.xml
@@ -13,7 +13,7 @@
 
         <item name="black">@color/black</item>
         <item name="white">@color/white</item>
-        <item name="white_semitransparent">@color/colorGray</item>
+        <item name="white_semitransparent">@color/gray</item>
         <item name="black_transparent_154">@color/black_transparent_154</item>
         <item name="colorGray">@color/colorGrayDark</item>
 
@@ -39,9 +39,9 @@
         <item name="rumourSmallSeparatorColor">@color/black_transparent_154</item>
         <item name="channelItemCaption">@color/white</item>
         <item name="channelItemBackground">@color/colorPrimary</item>
-        <item name="channelItemDate">@color/colorGray</item>
+        <item name="channelItemDate">@color/gray</item>
         <item name="postCommentContainerColor">@color/colorPrimarySemiDarkSemiTransparent</item>
-        <item name="postCommentHintColor">@color/colorGray</item>
+        <item name="postCommentHintColor">@color/gray</item>
         <item name="postCommentTextColor">@color/white</item>
         <item name="newsLikeIcon">@color/white</item>
         <item name="newsLikedIcon">@color/colorAccent</item>
@@ -156,7 +156,7 @@
         <item name="profileNameColorRef">@color/colorGrayDark</item>
 
         <item name="chatEditTextColorRef">@color/colorGrayDark</item>
-        <item name="chatEditTextHintColorRef">@color/colorGray</item>
+        <item name="chatEditTextHintColorRef">@color/gray</item>
         <item name="chatEditTextBackgroundColorRef">@color/colorWhiteLight</item>
 
         <item name="chatSlideButtonBackgroundColorRef">@color/colorPrimary</item>
@@ -282,13 +282,13 @@
         <item name="android:maxLines">1</item>
         <item name="android:layout_margin">5dp</item>
         <item name="android:textSize">16sp</item>
-        <item name="android:textColorHint">@color/colorGray</item>
+        <item name="android:textColorHint">@color/gray</item>
     </style>
 
     <style name="sign_up_edit_text">
         <item name="android:textAlignment">center</item>
         <item name="android:maxLines">1</item>
-        <item name="android:textColorHint">@color/colorGray</item>
+        <item name="android:textColorHint">@color/gray</item>
         <item name="android:textColor">@android:color/white</item>
     </style>
 
