--- a/SportsSideKick/app/src/main/res/drawable/button_onclick_change_text_color_login.xml
+++ b/SportsSideKick/app/src/main/res/drawable/button_onclick_change_text_color_login.xml
@@ -1,4 +1,4 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="@color/colorGray" android:state_pressed="true"/>
+    <item android:color="@color/gray" android:state_pressed="true"/>
     <item android:color="@color/black_transparent_154"/>
 </selector>
