--- a/SportsSideKick/app/src/sportsidekick/res/values/colors.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/values/colors.xml
@@ -27,7 +27,7 @@
 
     <color name="black">#000000</color>
     <color name="black_transparent_154">#9a000000</color>
-    <color name="colorGray">#9ba1a3</color>
+    <color name="gray">#9ba1a3</color>
     <color name="colorGrayMediumLight">#F7F7F7</color>
     <color name="login_background">#e5e5e5</color>
     <color name="chat_content_right_color">#e6f7f4</color>
